<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper_1"
        tools:context=".fatcalculator.FatCalculatorFragment">

        <!-- TODO: Update blank fragment layout -->


        <Button
            android:id="@+id/fat_back_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/fat_back_button"
            android:textColor="@color/menu_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/fat_cal_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/fat_cal_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/fat_cal_buton"
            android:textColor="@color/menu_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/fat_age_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:ems="10"
            android:hint="@string/age_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fat_hr_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/heart_rate_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fat_age_num" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
