<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper_1"
        tools:context=".bmi.BmiFragment">

        <Button
            android:id="@+id/bmi_calculator_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/bmi_calculator_button"
            android:textColor="@color/menu_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bmi_back_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/bmi_back_button"
            android:textColor="@color/menu_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/bmi_calculator_button"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/hight_edit_bmi_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hight_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/wight_edit_bmi_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/weight_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hight_edit_bmi_num" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
