<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper_1"
        tools:context=".caloriescal.CaloriesFragment">


        <Button
            android:id="@+id/calories_back_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/calories_back_button"
            android:textColor="@color/menu_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/calories_cal_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/calories_cal_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/calories_cal_button"
            android:textColor="@color/menu_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/calories_age_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/age_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/calories_hight_num"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/calories_hight_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/hight_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/calories_weight_num"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calories_age_num" />

        <EditText
            android:id="@+id/calories_weight_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/weight_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calories_hight_num" />

        <RadioGroup
            android:id="@+id/gender_group_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:gravity="center"
            android:padding="15dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calories_weight_num">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="Gender"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
